make every message in a thread more visible

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -83,13 +83,13 @@ td.subject > span,
 }
 
 .message {
-	border-top: 1px dashed #aaa;
 	margin-top: 1em;
 	padding-top: .3ex;
 }
 
 .message .meta {
 	margin-bottom: 1ex;
+	background-color: #eee;
 }
 
 .message .subject {
