search: turn query, page into props

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -305,19 +305,16 @@ Vue.component('thread', {
 });
 
 Vue.component('search', {
+	props: 'query page'.split(' '),
 	data: function() {
 		return {
-			query: this.$route.query.q,
 			results: null,
-			page: this.$route.query.page || 1,
 
 			thread_id: this.$route.params.thread,
 		};
 	},
 	watch: {
 		$route: function(to, from) {
-			this.query = to.query.q;
-			this.page = to.query.page || 1;
 			this.thread_id = to.params.thread;
 			this.update();
 		},
