do not reload search results on every url update, watch only for relevant changes

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -332,7 +332,10 @@ Vue.component('search', {
 		};
 	},
 	watch: {
-		$route: function(to, from) {
+		query: function(to, from) {
+			this.update();
+		},
+		page: function(to, from) {
 			this.update();
 		},
 	},
