main: use query from the url, not from the input (which might be partial)

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -512,7 +512,12 @@ let NetViel = Vue.component('netviel', {
 				<input v-model="query" ref="query" @keyup.enter="update_query">
 			</div>
 
-			<search :class="{ 'compact': thread_id }" :query="query" :page="page" @query-append="query_append"></search>
+			<search
+				:class="{ 'compact': thread_id }"
+				:query="this.$route.query.q"
+				:page="this.$route.query.page || 1"
+				@query-append="query_append"
+				></search>
 
 			<thread v-if="thread_id" :id="thread_id"></thread>
 		</div>
