unfold messages back when the thread gets changed

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -182,6 +182,10 @@ Vue.component('message', {
 		}
 	},
 	watch: {
+		message_id: function(to, from) {
+			// thanks, VDOM :|
+			this.folded = false;
+		},
 		tags: function(to, from) {
 			this.tags_local = to;
 		},
