show loading indicator on every thread update

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -290,6 +290,7 @@ Vue.component('thread', {
 	},
 	watch: {
 		$route: function(to, from) {
+			this.thread = null; // show loading indicator
 			this.fetch_thread();
 		},
 	},
