--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -176,8 +176,6 @@ Vue.component('message', {
 	props: 'date subject from to cc bcc content_type content attachments message_id tags'.split(' '),
 	data: function() {
 		return {
-			// shadow tags so we can update it when we toggle_unread()
-			tags_local: this.tags,
 			folded: false,
 		}
 	},
@@ -186,16 +184,13 @@ Vue.component('message', {
 			// thanks, VDOM :|
 			this.folded = false;
 		},
-		tags: function(to, from) {
-			this.tags_local = to;
-		},
 	},
 	computed: {
 		isHTML: function() {
 			return this.content_type == 'text/html'
 		},
 		unread: function() {
-			return this.tags_local.indexOf('unread') != -1;
+			return this.tags.indexOf('unread') != -1;
 		},
 	},
 	methods: {
@@ -239,7 +234,7 @@ Vue.component('message', {
 				<div class="data">
 					<span class="date">{{date}}</span>
 					<div class="tags">
-						<span v-for="t in tags_local" v-if="t != 'unread'">{{ t }}</span>
+						<span v-for="t in tags" v-if="t != 'unread'">{{ t }}</span>
 					</div>
 					<span class="raw"><a :href="\`/api/message/\${message_id}/raw\`">raw</a></span>
 					<span class="subject">{{subject}}</span>
