disable text selection for message toggles

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -108,6 +108,9 @@ td.subject > span,
 	flex-shrink: 1;
 	margin: 0 .5ex;
 	text-align: center;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
 }
 
 .message .subject {
