--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -78,8 +78,8 @@ td.subject > span,
 
 .results.compact {
 	min-height: 5em;
-	height: 30vh;
-	overflow-y: scroll;
+	max-height: 30vh;
+	overflow-y: auto;
 }
 
 .unread-marker {
