--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -56,13 +56,26 @@ td.subject > span,
 	margin-left: .5ex;
 	margin-right: 0;
 }
-
-.results .tags {
-	float: left;
-}
+.
 .message .tags {
 	float: right;
 	clear: right;
+}
+
+.results {
+	display: grid;
+	grid-template-columns: min-content auto;
+}
+.results .pager {
+	grid-row: 1;
+	grid-column: 1 / span 2;
+}
+.results .tags,
+.results table {
+	grid-row: 2;
+}
+.results .table table {
+	width: 100%;
 }
 .results .tags > span {
 	cursor: pointer;
