--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -284,7 +284,7 @@ Vue.component('message', {
 					v-if="att.filename"
 					:title="att.filename"
 					>
-					<img v-if="att.content_type.startsWith('image/')" :src="\`/api/attachment/\${message_id}/\${idx}\`">
+					<img v-if="att.content_type.startsWith('image/')" :src="\`/api/attachment/\${message_id}/\${idx}/\${encodeURIComponent(att.filename)}\`">
 					&#x1F4CE;&nbsp;{{ att.filename }}
 				</a>
 			</div>
