main: only watch for query updates in the url

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -560,8 +560,8 @@ let NetViel = Vue.component('netviel', {
 		};
 	},
 	watch: {
-		$route: function(to, from) {
-			this.query = to.query.q;
+		'$route.query.q': function(to, from) {
+			this.query = to;
 		},
 	},
 	computed: {
